--- a/TareaVectores/Config/DefaultEngine.ini
+++ b/TareaVectores/Config/DefaultEngine.ini
@@ -68,13 +68,13 @@ FontDPIPreset=Standard
 FontDPI=72
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/MyProject3")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/MyProject3")
++ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/TareaVectores")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/TareaVectores")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=078C1EFE4525CD94351B33BB70593E51
+SecurityToken=00D7EB2D4FEECCCC2C3B13898E5AAB3E
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
